# exastro-it-automation

./: .gitguardian.yaml  .gitignore
.devcontainer/: .env.sample  docker-compose agent.event-relay.yml  docker-compose.agent.ansible.execution.yml  docker-compose.agent.event-relay.yml  docker-compose.agent.oase.yml  docker-compose.devcontainer.yml  docker-compose.devcontainer.yml.txt  docker-compose.platform.yml  docker-compose.yml  docker-compose.yml.txt
.devcontainer/ita-ag-ansible-execution/: .devcontainer.json
.devcontainer/ita-ag-event-relay/: .devcontainer.json
.devcontainer/ita-ag-oase/: .devcontainer.json
.devcontainer/ita-api-admin/: .devcontainer.json
.devcontainer/ita-api-ansible-execution-receiver/: .devcontainer.json
.devcontainer/ita-api-event-relay-receiver/: .devcontainer.json
.devcontainer/ita-api-oase-receiver/: .devcontainer.json
.devcontainer/ita-api-organization/: .devcontainer.json
.devcontainer/ita-by-ansible-execute/: .devcontainer.json
.devcontainer/ita-by-ansible-legacy-role-vars-listup/: .devcontainer.json
.devcontainer/ita-by-ansible-legacy-vars-listup/: .devcontainer.json
.devcontainer/ita-by-ansible-pioneer-vars-listup/: .devcontainer.json
.devcontainer/ita-by-ansible-towermaster-sync/: .devcontainer.json
.devcontainer/ita-by-cicd-for-iac/: .devcontainer.json
.devcontainer/ita-by-collector/: .devcontainer.json
.devcontainer/ita-by-conductor-regularly/: .devcontainer.json
.devcontainer/ita-by-conductor-synchronize/: .devcontainer.json
.devcontainer/ita-by-event-driven/: .devcontainer.json
.devcontainer/ita-by-file-autoclean/: .devcontainer.json
.github/: secret_scanning.yml
charts/: epoch-template.yaml  exastro-it-automation-0.1.0.tgz  exastro-it-automation-1.0.0.tgz  exastro-it-automation-1.0.1.tgz  exastro-it-automation-1.0.2.tgz  exastro-it-automation-1.0.3.tgz  exastro-it-automation-1.0.4.tgz  exastro-it-automation-1.0.5.tgz  exastro-it-automation-1.0.6.tgz  index.yaml  it-automation-0.1.0.tgz
ita_root/: poetry.sh  reverse-proxy.conf  test.sh
ita_root/ita_ag_ansible_execution/: .env.sample  Dockerfile  README.md  agent_child.py  agent_child_main.py  agent_main.py  logging.yml  openapi.yaml  pyproject.toml  setup.sh
ita_root/ita_ag_ansible_execution/agent/: agent_child_init.py  agent_init.py  entrypoint.sh
ita_root/ita_ag_ansible_execution/agent/libs/: exastro_api.py
ita_root/ita_ag_ansible_execution/libs/: agent_child_process.py  agent_main_process.py  util.py
ita_root/ita_ag_ansible_execution/swagger/: swagger.yaml
ita_root/ita_ag_oase/: .env.sample  .gitignore  Dockerfile  agent_main.py  pyproject.toml
ita_root/ita_ag_oase/libs/: collect_event.py  event_collection_settings.py  sqlite_connect.py
ita_root/ita_ag_oase/tests/: test_agent_main.py
ita_root/ita_ag_oase/tests/common_libs/oase/: test_api_client_common.py
ita_root/ita_ag_oase/tests/libs/: test_collect_event.py
ita_root/ita_api_ansible_execution_receiver/: Dockerfile  api.py  openapi.yaml  pyproject.toml
ita_root/ita_api_ansible_execution_receiver/config/httpd.conf/: httpd.conf  wsgi.conf
ita_root/ita_api_ansible_execution_receiver/controllers/: ansible_execution_controller.py  ansible_receiver_controller.py  internal_health_check_service_controller.py
ita_root/ita_api_ansible_execution_receiver/libs/: ansible_controll.py  ansible_execution.py  ansible_execution_receiver_common.py  ansible_receiver_common.py
ita_root/ita_api_ansible_execution_receiver/swagger/: swagger.yaml
ita_root/ita_api_ansible_execution_receiver/test/: test_ansible_execution.py
ita_root/ita_by_ansible_execute/ita_ansible_agent/: Dockerfile  Dockerfile_snow  pyproject.toml
ita_root/ita_by_ansible_execute/ita_ansible_agent/config/: ansible.cfg  centos8.repo
ita_root/ita_by_collector/: Dockerfile  backyard_main.py  pyproject.toml
manifest_template/: ita-api-admin.yaml  ita-api-org.yaml  ita-by-ansible-execute.yaml  ita-by-ansible-legacy-role-vars-listup.yaml  ita-by-ansible-towermaster-sync.yaml  ita-by-conductor-sync.yaml  ita-by-create-menu.yaml  ita-configmap.yaml  ita-ingress-gitlab-tls.yaml  ita-ingress-gitlab.yaml  ita-ingress-http.yaml  ita-ingress-tls.yaml  ita-ingress.yaml  ita-secret-idpw.yaml  ita-secret.yaml  ita-web-server.yaml
tools/: create-organization.conf  create-organization.sample.json  create-organization.sh  diff_check_main.sh  diff_check_reps.sh  import_platform_db.sh
(+1399 files in other folders)
