[tool.poetry]
name = "ita-ag-oase"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
setuptools = ">=0.0.0"
flask = "^2.0.0"
requests = ">=0.0.0"
pyyaml = ">=0.0.0"
pytz = ">=0.0.0"
python-dotenv = ">=0.0.0"
chardet = ">=0.0.0"
pycryptodome = ">=0.0.0"
jmespath = ">=0.0.0"
imapclient = ">=0.0.0"
pysocks = ">=0.0.0"
requests-toolbelt = ">=0.0.0"


[tool.poetry.group.first_install.dependencies]
certifi = ">=0.0.0"


[tool.poetry.group.develop_build.dependencies]
debugpy = ">=0.0.0"
flake8 = ">=0.0.0"
autopep8 = ">=0.0.0"
psutil = ">=0.0.0"
pytest = ">=0.0.0"
pytest-env = ">=0.0.0"
pytest-cov = ">=0.0.0"
pytest-docker = ">=0.0.0"
pytest-mock = ">=0.0.0"
requests-mock = ">=0.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
